# mcp_geom

./: CLAUDE.md  README.md  chat_app.py  ethane.xyz  geometry_tools.py  mcp_server.py  mcp_utils.py  molecule.xyz  pyproject.toml
tests/: conftest.py  test_geometry_tools.py  test_success_criteria.py
